objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Areas_of_Expertise__c</fullName>
        <label>Areas of Expertise</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Computer Usage</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Programming</fullName>
                </value>
                <value>
                    <fullName>Development (IT)</fullName>
                </value>
                <value>
                    <fullName>Development (HR)</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Recruiting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability_Start_Date__c</fullName>
        <label>Availability Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Expected_Salary__c</fullName>
        <label>Current/Expected Salary</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <externalId>true</externalId>
        <label>Email address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Years_Experience__c</fullName>
        <label>No. Years Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>More than 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Name__c</fullName>
        <label>Second Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>